0.0.5
    Added mobs.yml, stores mob health & damage
    Modified player vs mob damage based on config
0.0.4
    Added /mythic [show] [hp|mp], toggles the display of health & mana regen
    Modified player vs player damage based on player attributes
0.0.3
    Implemented custom health & health regen based on player attributes
    Implemented mana & mana regen based on player attributes
    Synced health w/ health bar
    Fixed /stats not displaying stats correctly
0.0.2
    Implemented /stats, displays player stats
    Added config.yml, stores general options
    Added profiles.yml, stores player stats
    Added classes.yml, stores class stats
    Added attributes.yml, stores attribute calculations
0.0.1
    Implemented /mythic, displays plugin info