@@ -1,40 +1,50 @@
 strength:
   health: 0
   mana: 0
+  health_regen: 0
+  mana_regen: 0
   armor: 1
   melee_damage: 1
-  ranged_damage: 0
+  range_damage: 0
   attack_speed: 0
   move_speed: 0
 dexterity:
   health: 0
   mana: 0
+  health_regen: 0
+  mana_regen: 0
   armor: 0
   melee_damage: 0
-  ranged_damage: 1
+  range_damage: 1
   attack_speed: 1
   move_speed: 1
 vitality:
   health: 1
   mana: 0
+  health_regen: 0
+  mana_regen: 0
   armor: 1
   melee_damage: 0
-  ranged_damage: 0
+  range_damage: 0
   attack_speed: 0
   move_speed: 0
 wisdom:
   health: 0
   mana: 1
+  health_regen: 0
+  mana_regen: 0
   armor: 0
   melee_damage: 0
-  ranged_damage: 0
+  range_damage: 0
   attack_speed: 0
   move_speed: 0
 luck:
   health: 0
   mana: 0
+  health_regen: 0
+  mana_regen: 0
   armor: 0
   melee_damage: 0
-  ranged_damage: 0
+  range_damage: 0
   attack_speed: 0
   move_speed: 0
